--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,10 @@ button, input, label {
   display: block;
 }
 
+h2 {
+  font-size: 24px;
+}
+
 .controls {
   display: flex;
   flex-direction: column;
